--- a/infra/helm/rag-system/values.yaml
+++ b/infra/helm/rag-system/values.yaml
@@ -6,6 +6,54 @@ global:
   imageRegistry: ""
   imagePullSecrets: []
 
+# Service Account
+serviceAccount:
+  create: true
+  name: ""
+  annotations:
+    # Example for IRSA (IAM Roles for Service Accounts)
+    # eks.amazonaws.com/role-arn: arn:aws:iam::ACCOUNT:role/RAG_APP_ROLE
+
+# Configuration (non-sensitive)
+config:
+  environment: "dev"
+  logLevel: "info"
+  
+  database:
+    host: ""
+    port: "5432"
+    name: "rag_db"
+    username: "postgres"
+  
+  redis:
+    host: ""
+    port: "6379"
+  
+  aws:
+    region: "ap-northeast-2"
+  
+  s3:
+    bucketName: ""
+  
+  vectorDB:
+    type: "milvus"
+    host: "milvus"
+    port: "19530"
+  
+  aiModel:
+    provider: "openai"
+    name: "gpt-4"
+    embeddingModel: "text-embedding-3-small"
+
+# Secrets (sensitive configuration)
+secrets:
+  databaseUrl: ""
+  databasePassword: ""
+  redisUrl: ""
+  redisAuthToken: ""
+  openaiApiKey: ""
+  jwtSecret: ""
+
 # Frontend configuration
 frontend:
   enabled: true
@@ -20,6 +68,7 @@ frontend:
     type: ClusterIP
     port: 3000
     targetPort: 3000
+    annotations: {}
   
   ingress:
     enabled: true
@@ -27,6 +76,8 @@ frontend:
     annotations:
       kubernetes.io/ingress.class: nginx
       cert-manager.io/cluster-issuer: "letsencrypt-prod"
+      nginx.ingress.kubernetes.io/ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     hosts:
       - host: rag-system.example.com
         paths:
@@ -37,6 +88,8 @@ frontend:
         hosts:
           - rag-system.example.com
   
+  env: []
+  
   resources:
     limits:
       cpu: 500m
@@ -44,6 +97,12 @@ frontend:
     requests:
       cpu: 250m
       memory: 256Mi
+  
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+  volumeMounts: []
+  volumes: []
 
 # Backend configuration
 backend:
@@ -59,20 +118,9 @@ backend:
     type: ClusterIP
     port: 8000
     targetPort: 8000
+    annotations: {}
   
-  env:
-    - name: DATABASE_URL
-      valueFrom:
-        secretKeyRef:
-          name: rag-secrets
-          key: database-url
-    - name: REDIS_URL
-      value: "redis://redis:6379"
-    - name: OPENAI_API_KEY
-      valueFrom:
-        secretKeyRef:
-          name: rag-secrets
-          key: openai-api-key
+  env: []
   
   resources:
     limits:
@@ -81,10 +129,16 @@ backend:
     requests:
       cpu: 500m
       memory: 512Mi
+  
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+  volumeMounts: []
+  volumes: []
 
-# PostgreSQL configuration
+# External PostgreSQL configuration (for external RDS)
 postgresql:
-  enabled: true
+  enabled: false
   auth:
     postgresPassword: "password"
     database: "rag_db"
@@ -93,9 +147,9 @@ postgresql:
       enabled: true
       size: 10Gi
 
-# Redis configuration
+# External Redis configuration (for external ElastiCache)
 redis:
-  enabled: true
+  enabled: false
   auth:
     enabled: false
   master:
@@ -103,11 +157,19 @@ redis:
       enabled: true
       size: 1Gi
 
-# Milvus configuration (external)
-milvus:
+# Vector database configuration
+vectorDB:
+  # Set to true if deploying Milvus in-cluster
   enabled: false
-  host: "milvus"
-  port: 19530
+  
+  milvus:
+    host: "milvus"
+    port: 19530
+    
+  # Alternative: Pinecone configuration
+  pinecone:
+    environment: ""
+    apiKey: ""
 
 # Monitoring
 monitoring:
@@ -123,4 +185,13 @@ autoscaling:
   minReplicas: 2
   maxReplicas: 10
   targetCPUUtilizationPercentage: 80
-  targetMemoryUtilizationPercentage: 80 
+  targetMemoryUtilizationPercentage: 80
+
+# Network policies
+networkPolicy:
+  enabled: false
+
+# Pod Disruption Budget
+podDisruptionBudget:
+  enabled: false
+  minAvailable: 1 
