--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,7 @@ httpx==0.25.2
 pytest==7.4.3
 pytest-asyncio==0.21.1
 python-dotenv==1.0.0
-openai==1.3.7
+openai>=1.6.1,<2.0.0
 langchain==0.0.340
 langchain-openai==0.0.2
 chromadb==0.4.18
@@ -22,4 +22,4 @@ PyPDF2==3.0.1
 python-docx==1.1.0
 Pillow==10.1.0
 boto3==1.34.0
-prometheus-client==0.19.0 
+prometheus-client==0.19.0
