--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -62,8 +62,8 @@ jobs:
 
       - name: Run code formatting check
         run: |
-          black --check .
-          isort --check-only .
+          black --check backend/
+          isort --check-only backend/
 
       - name: Run linter
         run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -135,4 +135,4 @@ jobs:
           docker run -d --name test-backend -p 8000:8000 rag-backend:latest
           sleep 10
           curl -f http://localhost:8000/health || exit 1
-          docker stop test-backend 
+          docker stop test-backend
