--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -62,8 +62,8 @@ jobs:
 
       - name: Run code formatting check
         run: |
-          black --check backend/
-          isort --check-only backend/
+          black --check .
+          isort --check-only .
 
       - name: Run linter
         run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
