--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-  "python.defaultInterpreterPath": "./backend/.venv/bin/python",
+  "python.defaultInterpreterPath": "./backend/venv/Scripts/python.exe",
+  "python.terminal.activateEnvironment": true,
+  "python.analysis.extraPaths": ["./backend"],
   "python.linting.enabled": true,
   "python.linting.flake8Enabled": true,
   "python.linting.mypyEnabled": true,
@@ -14,8 +16,8 @@
   
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.organizeImports": true
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "explicit"
   },
   
   "eslint.workingDirectories": ["frontend"],
@@ -28,7 +30,7 @@
     "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-      "source.organizeImports": true
+      "source.organizeImports": "explicit"
     }
   },
   
@@ -64,6 +66,7 @@
     "**/__pycache__": true,
     "**/*.pyc": true,
     "**/node_modules": true,
+    "**/venv": true,
     "**/.next": true,
     "**/dist": true,
     "**/.pytest_cache": true,
@@ -112,4 +115,4 @@
   "files.associations": {
     "*.mdc": "markdown"
   }
-} 
+}
