--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,7 @@ httpx==0.25.2
 pytest==7.4.3
 pytest-asyncio==0.21.1
 python-dotenv==1.0.0
-openai>=1.6.1,<2.0.0
+openai==1.6.1
 langchain==0.0.340
 langchain-openai==0.0.2
 chromadb==0.4.18
