--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -67,7 +67,7 @@ jobs:
       - run: python -m pip install --upgrade pip
       - run: pip install safety bandit
       - run: safety check --json
-      - run: bandit -r . -f json
+      - run: bandit -r . -f json -x ./tests
 
   frontend-test:
     runs-on: ubuntu-latest
@@ -103,11 +103,22 @@ jobs:
           - 5432:5432
     steps:
       - uses: actions/checkout@v4
-      - run: docker-compose -f docker-compose.test.yml up -d
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Log in to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Set up Docker Compose
+        uses: docker/compose-action@v3
+      - run: docker compose -f docker-compose.test.yml up -d
       - run: sleep 30
       - run: curl -f http://localhost:3000 || exit 1
       - run: curl -f http://localhost:8000/health || exit 1
-      - run: docker-compose -f docker-compose.test.yml down
+      - run: docker compose -f docker-compose.test.yml down
 
   deploy-staging:
     runs-on: ubuntu-latest
