--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -112,8 +112,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Set up Docker Compose
-        uses: docker/compose-action@v3
+      # docker compose는 ubuntu-latest에 기본 내장되어 있으므로 별도 setup action 없이 바로 사용
       - run: docker compose -f docker-compose.test.yml up -d
       - run: sleep 30
       - run: curl -f http://localhost:3000 || exit 1
