--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -28,6 +28,7 @@ ENV NODE_ENV production
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
+# Copy public directory
 COPY --from=builder /app/public ./public
 
 # Automatically leverage output traces to reduce image size
