--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -116,7 +116,7 @@ jobs:
       - run: docker compose -f docker-compose.test.yml up -d
       - run: sleep 30
       - run: curl -f http://localhost:3000 || exit 1
-      - run: curl -f http://localhost:8000/health || exit 1
+      - run: curl -f http://localhost:8000/api/health || exit 1
       - run: docker compose -f docker-compose.test.yml down
 
   deploy-staging:
