feat(vector,docs): improve Milvus API reliability, add integration test, and fix Docker build
- Milvus 서비스에 3회 재시도 및 로깅 추가
- 검색 API가 실제 Milvus 기반 Top-k 검색을 하도록 개선
- 통합 테스트(mocking 포함) 작성 및 신뢰성 확보
- frontend Dockerfile 및 .dockerignore 수정으로 빌드 오류 해결
- 관련 문서화 및 테스트 코드 추가

Closes T-006

--- a/infra/docker/Dockerfile.frontend
+++ b/infra/docker/Dockerfile.frontend
@@ -17,7 +17,7 @@ COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
 # Build the application
-RUN npm run build
+RUN ls -al node_modules/.bin && npx next build
 
 # Production image, copy all the files and run next
 FROM base AS runner
